app/styles/_core.less
/* ... */
.jenkinsfile-examples-modal {
  .jenkinsfile-examples p:last-child {
    // Use `modal-body` bottom margin and padding.
    margin-bottom: 0;
    padding-bottom: 0;
  }
  .modal-footer {
    margin-top: 0;
    padding-top: 0;
  }
}

.ace-inline {
  height: 300px;
}

.ace-inline-small {
  height: 200px;
}

#from-file .editor {
  height: 350px;
}

.edit-form {
  .with-divider {
    border-top: 1px solid rgba(0, 0, 0, 0.15);
    padding-top: 21px;
    padding-bottom: 10px;
    margin-top: 10px;
  }
  .labels {
    .form-group {
      width: 44%;
      .form-control {
        width: 100%;
      }
    }
  }
  .checkbox {
    margin: 10px 0;
  }

  .trigger-info {
    margin: 10px 0px 10px 0px;
    .trigger-url {
      display: inline-block;
      vertical-align: middle;
    }
    .trigger-actions {
      display: inline-block;
      margin-left: 5px;
      .action-icon,
      .action-icon:hover {
        color: @color-pf-black-700;
      }
    }
  }

  .section {
    padding-bottom: 5px;
  }
  @media (max-width: @screen-sm-min) {
    .trigger-url {
      max-width: 90%;
    }
    .labels {
      .form-group {
        width: 100%;
      }
    }
  }
}

.status {
  min-width: 130px;
}

status-icon {
  // when status-icon is child of [row], add margin-right to the icon
  // because the space resulting from display: inline-block collapses
  [row] > & {
    margin-right: 3px;
  }
  // so that status-icons have a fixed width (like .fa-fw, but better sized)
  // this ensures when the icons change, the text that follows doesn't shift
  .fa, .pficon {
    text-align: center;
    width: 1.230769em; // ~16px at 13px font size
    .last-status & {
      width: 20px;
    }
  }
  // fixes wobble that occurs when status-icons utilize fa-spin (see https://github.com/FortAwesome/Font-Awesome/issues/671#issuecomment-249591495)
  .fa-spin {
    font-size: 14px;
    line-height: normal;
  }
  // so that spinners match width of .fa/.pficon (16px or 20px)
  .spinner.spinner-inline {
    margin-left: 0.153846em; // ~2px at 13px font size
    margin-right: 0.153846em; // ~2px at 13px font size
    .last-status & {
      margin-left: 4px;
      margin-right: 4px;
    }
  }
}

pre.clipped {
  display: inline-block;
  margin-top: 10px;
  max-width: 100%;
  &.scroll {
    max-height: 150px;
    overflow: auto;
    width: 100%;
  }
}

.k8s-label {
  margin-right: 5px;
  // A bit more space below the actions button.
  margin-top: 3px;
  &:before {
    content: ' ';
    white-space: normal;
  }
  .label-pair {
    margin-bottom: 2px;
  .label {
    &:first-child {
      border-radius: 2px 0 0 2px;
    }
    &:last-child {
      border-radius: 0 2px 2px 0;
    }
  }
  .label-key {
    background-color: #bee1f4;
    color: #00659c;
    padding-top: 4px;
    padding-bottom: 4px;
    margin-left: 0;
    font-size: 12px;
  }
  // if its a link
  a.label-key {
    &:hover, &:focus, &:active {
      background-color: #00659c;
      color: #FFFFFF;
    }
  }
  .label-value {
    background-color: #7dc3e8;
    color: #FFFFFF;
    margin-left: 0;
    padding-top: 4px;
    padding-bottom: 4px;
    font-size: 12px;
  }
  a.label-value {
    &:hover, &:focus, &:active {
      background-color: #00659c;
    }
  }
  }
}
@media (max-width: @screen-sm-min) {
  .k8s-label {
  // enable label to truncate
    width: 100%;
    .label {
      display: block;
      min-width: 50px;
    }
    .label-pair {
      width: 100%;
    }
  }
}

.ace-bordered {
  border: 1px solid #8b8d8f;
  &.ace-read-only {
    border-color: #d1d1d1;
    background-color: #fafafa;
  }
}

.action-divider {
  color: @gray-light;
}

.surface-shaded .table {
  background-color: transparent;
}

.environment-variables {
  &.table.table-bordered > tbody > tr > td:first-child {
    font-weight: bold;
    padding-right: 10px;
    vertical-align: top;
  }
  &.table.table-bordered > tbody > tr > td:last-child {
    word-break: break-all;
    width: 100%;

    .env-var-value {
      font-family: @font-family-monospace;

      a {
        font-family: @font-family-base;
      }
    }
  }
}

.pretty-json {
  font-family: @font-family-monospace;
  white-space: pre-wrap;
}

.info-popover, .warnings-popover {
  cursor: help;
  vertical-align: middle;
  margin-left: 2px;
  &.pficon-info {
    color: @color-pf-black-700;
  }
}

// don't allow copy-to-clipboard .input-groups get bigger than 600px so Github webhook secrets aren't revealed within the input-group
copy-to-clipboard .input-group.limit-width {
  max-width: 300px;
}

.tech-preview-header {
  justify-content: space-between;
}

// add an option for a single-column display at screen resolutions 0-479px
@media (max-width: @screen-xxs-max) {
  .col-xxs-12 {
    width: 100%;
  }
}

